@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT([linphone],[3.1.0.1],[linphone-developers@nongnu.org])
+AC_INIT([linphone],[3.1.1],[linphone-developers@nongnu.org])
 
 dnl Source packaging numbers
 
