@@ -8,6 +8,7 @@ gtk-glade/friendlist.c
 gtk-glade/propertybox.c
 gtk-glade/update.c
 gtk-glade/buddylookup.c
+gtk-glade/setupwizard.c
 gtk-glade/main.glade
 gtk-glade/about.glade
 gtk-glade/contact.glade
@@ -20,6 +21,7 @@ gtk-glade/chatroom.glade
 gtk-glade/incoming_call.glade
 gtk-glade/parameters.glade
 gtk-glade/buddylookup.glade
+gtk-glade/waiting.glade
 coreapi/linphonecore.c
 coreapi/misc.c
 coreapi/exevents.c
